--- a/w0516_데이터분석/w0516_12_loc_iloc.ipynb
+++ b/w0516_데이터분석/w0516_12_loc_iloc.ipynb
@@ -567,8 +567,7 @@
     "df[df.columns[-1]] # 제일 뒤 컬럼 출력\n",
     "df[df.columns[[0,3,-1]]]\n",
     "df[df.columns[:]]\n",
-    "df[df.columns[0:3]] # 0:3 0부터 3앞에까지 \n",
-    "\n"
+    "df[df.columns[0:3]] # 0:3 0부터 3앞에까지 "
    ]
   },
   {
@@ -656,7 +655,9 @@
     "df[['이름','수학']]\n",
     "\n",
     "# column기준으로 row 정보 출력\n",
-    "df[['이름','수학']][:3]\n"
+    "df[['이름','수학']][:3]\n",
+    "df[df.columns][:3]\n",
+    "df[:3]\n"
    ]
   },
   {
