--- a/w0516_데이터분석/w0516_03.ipynb
+++ b/w0516_데이터분석/w0516_03.ipynb
@@ -40,6 +40,13 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
        "0   -20\n",
@@ -58,39 +65,6 @@
     "import pandas as pd\n",
     "\n",
     "# 1차원 데이터\n",
-    "temp = pd.Series([-20,-10,10,20])\n",
-    "temp"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "df144196",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "0   -20\n",
-       "1   -10\n",
-       "2    10\n",
-       "3    20\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "a_list = [-20,-10,10,20]\n",
     "temp = pd.Series(a_list) # 리스트 타입 -> 1차원 Series 타입을 변환\n",
     "temp[0]\n",
@@ -121,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "8316e6c1",
    "metadata": {},
    "outputs": [
@@ -129,7 +103,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "-20\n"
+      "-20\n",
+      "20\n"
      ]
     }
    ],
@@ -137,7 +112,8 @@
     "### Series index 지정하는 방법\n",
     "temp = pd.Series(a_list, index=['1월','2월','3월','4월'])\n",
     "temp\n",
-    "print(temp['1월'])"
+    "print(temp['1월'])\n",
+    "print(temp['4월'])"
    ]
   },
   {
